feat(server): add annotation
