# example/proto/gen_go/admin/user/user.pb.validate.go
@@ -60,6 +60,8 @@ func (m *User) validate(all bool) error {
 
 	// no validation rules for Username
 
+	// no validation rules for Password
+
 	if len(errors) > 0 {
 		return UserMultiError(errors)
 	}
